# fdtd-playground

./: .gitignore  README.md  flake.nix  pyproject.toml
assets/: fdtd.excalidraw
src/fdtd_playground/: __main__.py  grid.py  object.py  scene.py
