[project]
name = "fdtd-jax"
version = "0.1.0"
description = "A simple FDTD implementation in JAX"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.5.0",
    "jupyterlab>=4.3.5",
    "matplotlib>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
