[project]
name = "fdtd-playground"
version = "0.1.0"
description = "A simple FDTD playground"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.5.0",
    "jupyterlab>=4.3.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "scipy>=1.15.2",
    "taichi>=1.7.3",
    "tqdm>=4.67.1",
]

[tool.pyright]
reportInvalidTypeForm = false
reportAttributeAccessIssue = false
reportGeneralTypeIssues = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
start = "fdtd_playground.__main__:main"
